# godot-ser

./: CHANGELOG.md  godot-ser.cabal  nixpkgs.nix  package.yaml  readme.md  shell.nix
spec/: Spec.hs
spec/Data/Godot/: SerializeSpec.hs
src/Data/Godot/: Serialize.hs
