cabal-version: 2.2

name:           godot-ser
version:        0.1.0.0
synopsis:       Binary [de]serialization compatible with Godot game engine's default serialization (var_to_bytes, bytes_to_var)
author:         Vito Canadi
maintainer:     vito.canadi@gmail.com
license:        NONE
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

library
  exposed-modules:
      Data.Godot.Serialize
  other-modules:
      Paths_godot_ser
  autogen-modules:
      Paths_godot_ser
  hs-source-dirs:
      src
  default-extensions:
      LambdaCase
      OverloadedStrings
      DefaultSignatures
      ScopedTypeVariables
      TypeApplications
      DeriveGeneric
  build-depends:
      attoparsec >= 0.14.4 && < 0.15
    , base       >= 4.16 && <5
    , bytestring >= 0.11.4 && < 0.12
    , containers >= 0.6.5 && < 0.7
    , linear     >= 1.21 && < 1.23
    , store      >= 0.7.16 && < 0.8
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Data.Godot.SerializeSpec
      Paths_godot_ser
  autogen-modules:
      Paths_godot_ser
  hs-source-dirs:
      spec
  default-extensions:
      LambdaCase
      OverloadedStrings
      DefaultSignatures
      ScopedTypeVariables
      TypeApplications
      DeriveGeneric
  build-depends:
      attoparsec
    , base
    , bytestring
    , containers
    , linear
    , store
    , godot-ser
    , hspec
  default-language: Haskell2010
